[package]
name = "dear-imgui-wgpu"
version = "0.4.0"
edition.workspace = true
description = "WGPU renderer for Dear ImGui"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dear-imgui-wgpu"
categories.workspace = true
keywords.workspace = true

[dependencies]
dear-imgui-rs = { path = "../../dear-imgui", version = "0.4" }
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
winit = { workspace = true, optional = true }

[features]
default = []
# Enable multi-viewport support
multi-viewport = ["dear-imgui-rs/multi-viewport", "dep:winit"]
# Enable WebGL support for WASM
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
