[package]
name = "dear-imgui-wgpu"
version = "0.10.1"
edition.workspace = true
description = "WGPU renderer backend for dear-imgui-rs (native + WebAssembly)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dear-imgui-wgpu"
categories.workspace = true
keywords.workspace = true

[dependencies]
dear-imgui-rs = { path = "../../dear-imgui", version = "0.10" }
wgpu27 = { package = "wgpu", version = "27.0", optional = true }
wgpu28 = { package = "wgpu", version = "28.0", optional = true }
bytemuck = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
winit = { workspace = true, optional = true }
sdl3-sys = { version = "0.6", optional = true }
raw-window-handle = { workspace = true, optional = true }

[features]
default = ["wgpu-28"]
# Select wgpu major version. These are mutually exclusive.
wgpu-27 = ["dep:wgpu27"]
wgpu-28 = ["dep:wgpu28"]
# Enable multi-viewport support with the winit platform backend.
multi-viewport-winit = ["dear-imgui-rs/multi-viewport", "dep:winit"]
# Enable multi-viewport support with SDL3 platform backend (native only)
multi-viewport-sdl3 = ["dear-imgui-rs/multi-viewport", "dep:sdl3-sys", "dep:raw-window-handle", "dep:objc2"]
# Debug logging for multi-viewport paths (see mvlog! macro)
mv-log = []
# Enable WebGL support for WASM
webgl = ["webgl-wgpu28"]
webgpu = ["webgpu-wgpu28"]
webgl-wgpu27 = ["wgpu27/webgl"]
webgl-wgpu28 = ["wgpu28/webgl"]
webgpu-wgpu27 = ["wgpu27/webgpu"]
webgpu-wgpu28 = ["wgpu28/webgpu"]
# Experimental: enable wasm font-atlas access for testing
wasm-font-atlas-experimental = ["dear-imgui-rs/wasm-font-atlas-experimental"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
