[package]
name = "dear-imgui-winit"
version = "0.4.0"
edition.workspace = true
description = "Winit backend for Dear ImGui"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dear-imgui-winit"
categories.workspace = true
keywords.workspace = true

[dependencies]
dear-imgui-rs = { path = "../../dear-imgui", version = "0.4" }
winit.workspace = true
#cfg-if.workspace = true
instant = { version = "0.1", features = ["wasm-bindgen"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }

[features]
default = []
# Enable multi-viewport support (WIP). Declared to silence cfg warnings; kept off by default.
multi-viewport = ["dear-imgui-rs/multi-viewport"]
