[package]
name = "dear-imgui-winit"
version = "0.8.0"
edition.workspace = true
description = "Winit platform backend for dear-imgui-rs"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dear-imgui-winit"
categories.workspace = true
keywords.workspace = true

[dependencies]
dear-imgui-rs = { path = "../../dear-imgui", version = "0.8" }
winit.workspace = true
#cfg-if.workspace = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
] }

[features]
default = []
# Enable multi-viewport support (WIP). Declared to silence cfg warnings; kept off by default.
multi-viewport = ["dear-imgui-rs/multi-viewport"]
# Debug logging for multi-viewport paths (see mvlog! macro in src/multi_viewport.rs).
mv-log = []
