[workspace]
resolver = "2"

[package]
name = "dear-imgui-ios-smoke"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "dear_imgui_ios_smoke"
crate-type = ["staticlib"]

[dependencies]
dear-imgui-rs = { path = "../../dear-imgui" }
dear-imgui-wgpu = { path = "../../backends/dear-imgui-wgpu" }
dear-imgui-winit = { path = "../../backends/dear-imgui-winit" }
pollster = "0.4"
wgpu = "29.0"
winit = "0.30.13"
