[package]
name = "color-image-plot-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
dear-imgui = { path = "../../dear-imgui" }
dear-imgui-winit = { path = "../../backends/dear-imgui-winit" }
dear-imgui-wgpu = { path = "../../backends/dear-imgui-wgpu" }
winit.workspace = true
wgpu.workspace = true
env_logger.workspace = true
pollster.workspace = true
