[package]
name = "wgpu-winit-demo"
version.workspace = true
edition.workspace = true
description = "Dear ImGui WGPU + Winit demo with WASM support"

[dependencies]
dear-imgui = { path = "../../dear-imgui", version = "0.1" }
dear-imgui-wgpu = { path = "../../backends/dear-imgui-wgpu", version = "0.1" }
dear-imgui-winit = { path = "../../backends/dear-imgui-winit", version = "0.1" }
wgpu.workspace = true
winit.workspace = true
log.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster.workspace = true
parking_lot.workspace = true
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
fern.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document", 
    "Window", 
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
] }

[features]
default = []
# Enable WASM support
wasm = [
    "dear-imgui/wasm",
    "dear-imgui-wgpu/webgl",
]
