[package]
name = "dear-file-browser"
version = "0.8.0"
edition.workspace = true
description = "File dialogs and in-UI file browser for dear-imgui-rs"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
features = ["imgui", "native-rfd"]

[features]
# Defaults: enable both backends and tracing. Runtime picks the best.
default = ["imgui", "native-rfd", "tracing"]
# ImGui UI backend; pulls small date-time crate for tooltips
imgui = ["dep:chrono"]
native-rfd = ["dep:rfd"]
tracing = ["dep:tracing"]

[dependencies]
dear-imgui-rs = { path = "../../dear-imgui", version = "0.8" }
thiserror.workspace = true
tracing = { workspace = true, optional = true }

# Native file dialogs (desktop + wasm) — optional
rfd = { version = "0.15", optional = true, default-features = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }

[dev-dependencies]
pollster = { workspace = true }
