[package]
name = "dear-imgui-test-engine"
version = "0.10.1"
edition.workspace = true
description = "Safe Rust wrapper for Dear ImGui Test Engine"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
dear-imgui-rs = { path = "../../dear-imgui", version = "0.10", features = ["test-engine"] }
dear-imgui-test-engine-sys = { path = "../dear-imgui-test-engine-sys", version = "0.10", default-features = false }
bitflags.workspace = true

[features]
default = ["capture"]
freetype = [
    "dear-imgui-rs/freetype",
    "dear-imgui-test-engine-sys/freetype",
]
capture = ["dear-imgui-test-engine-sys/capture"]
