[package]
name = "dear-imguizmo-quat"
version = "0.5.0"
edition.workspace = true
description = "High-level Rust bindings for ImGuIZMO.quat (C API) with Dear ImGui integration"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dear-imguizmo-quat"
categories.workspace = true
keywords.workspace = true
readme = "README.md"

[dependencies]
dear-imgui-rs = { path = "../../dear-imgui", version = "0.5" }
dear-imgui-sys = { path = "../../dear-imgui-sys", version = "0.5" }
dear-imguizmo-quat-sys = { path = "../dear-imguizmo-quat-sys", version = "0.5" }
thiserror.workspace = true
bitflags = { workspace = true }
glam = { workspace = true, optional = true }
mint = { workspace = true, optional = true }

[features]
default = ["glam"]
freetype = ["dear-imgui-rs/freetype", "dear-imguizmo-quat-sys/freetype"]
glam = ["dep:glam"]
mint = ["dep:mint"]
